--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(228, 199, 161);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+.cards-display {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.title {
+  margin-bottom: 2.5rem;
+  font-size: 5rem;
+}
+
+.card {
+  margin: 3rem;
+}
+
+.card:hover {
+  transform: scale(1.1);
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+.tier-btn-container {
+  display: flex;
+  gap: 2rem;
+  justify-content: center;
+}
+
+.tier-btn {
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  text-transform: capitalize;
+  margin: 0 0.5rem;
+  letter-spacing: 1px;
+  padding: 0.375rem 0.75rem;
+  cursor: pointer;
+}
+
+.tier-btn:hover {
+  transform: scale(1.1);
+}
+
+.tier-btn:focus {
+  border-bottom: 0.3rem solid rgb(126, 102, 70);
 }
